<resources>
    <string name="app_name">ToDo Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="type_your_pass">Type Your Password</string>
    <string name="retype_your_pass">Retype Your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="Already_registered">Already Registered</string>
    <string name="Not_registered">Not Registered Yet!!</string>
    <string name="type_your_task">Type your task...</string>


</resources>